--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -1,10 +1,15 @@
 version: 2.1
 
 description: >
-  Connect your CircleCI pipelines to Jira. Define builds and deployments as config and automatically update Jira issues with the results of your pipelines.
+  Sample orb description
+# What will your orb allow users to accomplish?
+# Descriptions should be short, simple, and informative.
 
 # This information will be displayed in the orb registry and is not mandatory.
 display:
-  home_url: "https://circleci.com/docs/jira-plugin/"
-  source_url: "https://github.com/circleci-public/jira-orb"
+  home_url: "https://www.example.com/docs"
+  source_url: "https://github.com/<organization>/<project-name>"
 
+# If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
+# orbs:
+#  hello: circleci/hello-build@0.0.5
