Adding when: always attribute to notify command

--- a/src/commands/notify.yml
+++ b/src/commands/notify.yml
@@ -78,3 +78,4 @@ steps:
         JIRA_SCRIPT_NOTIFY: <<include(scripts/notify.sh)>>
       name: Notify Jira
       command: <<include(scripts/run_notify.sh)>>
+      when: always
