--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  jira-orb: terawatt-infrastructure/jira-orb@dev:<<pipeline.git.revision>>
+  jira-orb-public: terawatt-infrastructure/jira-orb-public@dev:<<pipeline.git.revision>>
   orb-tools: circleci/orb-tools@11.5
 
 filters: &filters
@@ -24,7 +24,7 @@ workflows:
       - orb-tools/pack:
           filters: *filters
       - orb-tools/publish:
-          orb-name: terawatt-infrastructure/jira-orb
+          orb-name: terawatt-infrastructure/jira-orb-public
           vcs-type: << pipeline.project.type >>
           pub-type: production
           requires:
